Fix snow appearing behind the result headers

--- a/fraporu/tìlam/snow.css
+++ b/fraporu/tìlam/snow.css
@@ -6,6 +6,7 @@
 	bottom: 0;
 	pointer-events: none;
 	filter: drop-shadow(0 2px 3px rgba(0, 0, 0, 0.5));
+	z-index: 2;
 }
 
 .flake {
